fix: page spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+@page {
+  padding: 0;
+  margin: 0;
+}
